force-app/main/default/objects/Price__c/Price__c.object-meta.xml
<CustomObject>
    <label>Price</label>
    <nameField>
        <label>Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>