force-app/main/default/objects/Price__c/fields/D_mm__c.field-meta.xml
<CustomField>
    <fullName>D_mm__c</fullName>
    <formula>OD_mm__r.OD_mm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D, mm</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>