force-app/main/default/objects/Price__c/fields/Ends__c.field-meta.xml
<CustomField>
    <fullName>Ends__c</fullName>
    <label>Ends</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TubeEndsGroups</valueSetName>
    </valueSet>
</CustomField>