force-app/main/default/objects/Price__c/fields/MarginBG__c.field-meta.xml
<CustomField>
    <fullName>MarginBG__c</fullName>
    <label>Margin Budget</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>