force-app/main/default/objects/Price__c/fields/OD_inch__c.field-meta.xml
<CustomField>
    <fullName>OD_inch__c</fullName>
    <formula>OD_mm__r.OD_inch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OD (inch)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>