force-app/main/default/objects/Price__c/fields/OD_inch_max__c.field-meta.xml
<CustomField>
    <fullName>OD_inch_max__c</fullName>
    <formula>OD_mm_max__r.OD_inch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OD (inch) max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>