force-app/main/default/objects/Price__c/fields/OD_mm__c.field-meta.xml
<CustomField>
    <fullName>OD_mm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OD (mm)</label>
    <referenceTo>TubeOD__c</referenceTo>
    <relationshipLabel>Prices</relationshipLabel>
    <relationshipName>Prices</relationshipName>
    <type>Lookup</type>
</CustomField>