force-app/main/default/objects/Price__c/fields/OD_mm_max__c.field-meta.xml
<CustomField>
    <fullName>OD_mm_max__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OD (mm) max</label>
    <referenceTo>TubeOD__c</referenceTo>
    <relationshipLabel>Prices (OD (mm) max)</relationshipLabel>
    <relationshipName>Prices_max</relationshipName>
    <type>Lookup</type>
</CustomField>