force-app/main/default/objects/Price__c/fields/Price_List_H_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_List_H_Id__c</fullName>
    <label>Price List (H) Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>