force-app/main/default/objects/Price__c/fields/PriceListH__c.field-meta.xml
<CustomField>
    <fullName>PriceListH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price List (H)</label>
    <referenceTo>PriceListH__c</referenceTo>
    <relationshipLabel>Prices</relationshipLabel>
    <relationshipName>Prices</relationshipName>
    <type>Lookup</type>
</CustomField>