force-app/main/default/objects/Price__c/fields/SteelGradeGroup__c.field-meta.xml
<CustomField>
    <fullName>SteelGradeGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Steel Grade Group</label>
    <referenceTo>SteelGradeGroup__c</referenceTo>
    <relationshipLabel>Prices</relationshipLabel>
    <relationshipName>Prices</relationshipName>
    <type>Lookup</type>
</CustomField>