force-app/main/default/objects/Price__c/fields/WT_inch__c.field-meta.xml
<CustomField>
    <fullName>WT_inch__c</fullName>
    <formula>WT_mm__r.WT_inch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WT (inch)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>