force-app/main/default/objects/Price__c/fields/WT_inch_max__c.field-meta.xml
<CustomField>
    <fullName>WT_inch_max__c</fullName>
    <formula>WT_mm_max__r.WT_inch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WT (inch) max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>