force-app/main/default/objects/Price__c/fields/WT_mm__c.field-meta.xml
<CustomField>
    <fullName>WT_mm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WT (mm)</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipLabel>Prices</relationshipLabel>
    <relationshipName>Prices</relationshipName>
    <type>Lookup</type>
</CustomField>