force-app/main/default/objects/Price__c/fields/WT_mm_max__c.field-meta.xml
<CustomField>
    <fullName>WT_mm_max__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WT (mm) max</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipLabel>Prices (WT (mm) max)</relationshipLabel>
    <relationshipName>Prices_WT_max</relationshipName>
    <type>Lookup</type>
</CustomField>