force-app/main/default/objects/Price__c/fields/WTmm__c.field-meta.xml
<CustomField>
    <fullName>WTmm__c</fullName>
    <formula>WT_mm__r.WT_mm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WT, mm</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>